--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,9 @@
 repos:
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.15.0
-    hooks:
-      - id: isort
-        args: ['--profile', 'black']
   - repo: https://github.com/psf/black
-    rev: 21.12b0
+    rev: 24.4.2
     hooks:
       - id: black
-
+  - repo: https://github.com/pycqa/isort/
+    rev: 5.13.2
+    hooks:
+      - id: isort
